[tool.poetry]
name = "gpokeapi"
version = "0.1.0"
description = "Asynchronous PokeAPI client extensible powered by Gracy"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
packages = [
    { include = "gpokeapi", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gracy = "^1.25.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
tryceratops = "^2.3.2"
mypy = "^1.4.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
extra_standard_library = ["pytest"]

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
