[tool.poetry]
name = "gpokeapi"
version = "0.1.0"
description = "Asynchronous PokeAPI client extensible powered by Gracy"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
keywords = ["api", "pokemon", "async"]
readme = "README.md"
homepage = "https://github.com/guilatrova/graceful_pokeapi"
repository = "https://github.com/guilatrova/graceful_pokeapi"
include = [
    "LICENSE",
    "py.typed",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [
    { include = "gpokeapi", from = "src" },
]

[tool.poetry.urls]
"Changelog" = "https://github.com/guilatrova/graceful_pokeapi/blob/main/CHANGELOG.md"

[tool.semantic_release]
version_variable = [
    "src/gpokeapi/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gracy = "^1.28.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
tryceratops = "^2.3.2"
mypy = "^1.4.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
python-semantic-release = "7.33.0"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
extra_standard_library = ["pytest"]

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
