[tool.poetry]
name = "gpokeapi"
version = "0.2.0"
description = "Asynchronous PokeAPI client extensible powered by Gracy"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
keywords = ["api", "pokemon", "async"]
readme = "README.md"
homepage = "https://github.com/guilatrova/graceful_pokeapi"
repository = "https://github.com/guilatrova/graceful_pokeapi"
include = ["LICENSE", "py.typed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [{ include = "gpokeapi", from = "src" }]

[tool.poetry.urls]
"Changelog" = "https://github.com/guilatrova/graceful_pokeapi/blob/main/CHANGELOG.md"

[tool.semantic_release]
version_variable = ["src/gpokeapi/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
major_on_zero = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gracy = "^1.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
python-semantic-release = "7.33.0"
ruff = "^0.1.6"
pyright = "^1.1.338"

[tool.ruff]
line-length = 120
indent-width = 4
select = ["E4", "E7", "E9", "F", "I", "TRY"]
fixable = ["ALL"]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
extra-standard-library = ["pytest", "gracy", "httpx"]
required-imports = ["from __future__ import annotations"]

# https://microsoft.github.io/pyright/#/configuration
[tool.pyright]
include = ["src"]
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
